--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css";
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css";
+@import "./bulma.min.css";
 
 html,
 body {
