--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,102 @@
 @import "./bulma.min.css";
 
-html,
-body {
+html, body {
   height: 100%;
+  margin: 0px;
 }
 body {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
 }
 main {
+  position: relative;
   flex: 1 0 auto;
+  top: 50px;
+  margin-bottom: 50px;
 }
 footer {
   flex-shrink: 0;
+  padding: 3rem 1.5rem 3rem;
+}
+
+div.appBar > span.light {
+  top: 10px;
+  position: fixed;
+  font-size: larger;
+  font-weight: 500;
+  color: aquamarine;
+}
+
+div.appBar {
+  position: fixed;
+  height: 50px;
+  top: 0px;
+  text-align: center;
+  left: 0px;
+  width: 100%;
+  background-color: black;
+}
+
+/* Theme Switch */
+
+.switch {
+  top: 8px;
+  position: fixed;
+  display: inline-block;
+  width: 60px;
+  right: 10px;
+  height: 32px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.switch input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.switch input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
